--- a/css/main.css
+++ b/css/main.css
@@ -588,7 +588,7 @@ footer {
   margin: 5px 0 0 0;
 }
 .logofooter {
-  margin: 30px 0 0 0;
+  margin: 0 0 0 0;
   float: right;
 }
 .rodape .direitos {
@@ -905,4 +905,192 @@ footer {
   overflow: hidden;
 
   box-sizing: border-box;
+}
+
+html, body, div, span, applet, object, iframe,
+    h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+    a, abbr, acronym, address, big, cite, code,
+    del, dfn, em, img, ins, kbd, q, s, samp,
+    small, strike, strong, sub, sup, tt, var,
+    b, u, i, center,
+    dl, dt, dd, ol, ul, li,
+    fieldset, form, label, legend,
+    table, caption, tbody, tfoot, thead, tr, th, td,
+    article, aside, canvas, details, embed,
+    figure, figcaption, footer, header, hgroup,
+    menu, nav, output, ruby, section, summary,
+    time, mark, audio, video {
+      margin: 0;
+      padding: 0;
+      border: 0;
+      font-size: 100%;
+      font: inherit;
+      vertical-align: baseline;
+    }
+
+    article, aside, details, figcaption, figure,
+    footer, header, hgroup, menu, nav, section {
+      display: block;
+    }
+
+    body {
+      line-height: 1;
+    }
+
+    img {
+      vertical-align: middle;
+    }
+
+    ol, ul {
+      list-style: none;
+    }
+
+    blockquote, q {
+      quotes: none;
+    }
+
+    blockquote:before, blockquote:after,
+    q:before, q:after {
+      content: '';
+      content: none;
+    }
+
+    table {
+      border-collapse: collapse;
+      border-spacing: 0;
+    }
+
+    b, strong {
+      font-weight: bold;
+    }
+
+    i, em {
+      font-style: italic;
+    }
+  
+
+    body {
+      background-color: #FFFFFF;
+      color: #333333;
+      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+      font-size: 16px;
+      line-height: 1.42857;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+      font-family: inherit;
+      font-weight: 500;
+      line-height: 1.2;
+      color: inherit;
+    }
+
+    h1 { font-size: 41px; }
+    h2 { font-size: 34px; }
+    h3 { font-size: 28px; }
+    h4 { font-size: 20px; }
+    h5 { font-size: 16px; }
+    h6 { font-size: 14px; }
+
+    .bricks--page {
+      width: 100%;
+    }
+
+    .bricks--section {
+      width: 100%;
+    }
+
+    .bricks--section > div {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .bricks--row {
+      display: flex;
+      flex-flow: column nowrap;
+    }
+
+    .bricks--column > div {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .bricks--component-box {
+      display: flex;
+      flex-flow: column nowrap;
+      width: 100%;
+    }
+
+    @media screen and (min-width: 768px) {
+      .bricks--row {
+        flex-flow: row nowrap;
+      }
+    }
+    .bricks-form {
+      height: auto;
+      width: 100%;
+    }
+
+    .bricks-form__fieldset {
+      display: flex;
+      flex-flow: row wrap;
+      margin-left: -5px;
+      margin-right: -5px;
+    }
+
+    .bricks-form__field {
+      display: flex;
+      width: 100%;
+      flex-grow: 1;
+      flex-direction: column;
+    }
+
+    .bricks-form__label {
+      position: relative !important;
+      display: inline-block;
+      max-width: 100%;
+      margin-bottom: 0.4em;
+      line-height: 1.25;
+      vertical-align: middle;
+    }
+
+    .bricks-form__input {
+      display: block;
+      width: 100%;
+      padding: 0 0.5em;
+      line-height: 1.42857;
+    }
+
+    .bricks-form__input.error {
+      border: 1px solid red !important;
+    }
+
+    .bricks-form__field__option .bricks-form__label {
+      padding-left: 1.33em;
+      margin-bottom: 0.2em;
+    }
+
+    .bricks-form__field__option .bricks-form__label input[type="checkbox"],
+    .bricks-form__field__option .bricks-form__label input[type="radio"] {
+      margin: 0px 0px 0px -1.33em;
+    }
+
+    .bricks-form__submit {
+      position: relative;
+    }
+
+ .bricks--component-video div {
+  position: relative;
+  height: 0;
+  padding-bottom: 56.25%;
+  line-height: 0;
+  box-sizing: border-box;
+}
+
+ .bricks--component-video div iframe {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
